# OperatingSystem

./: .gitignore  CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  Daemon.cpp  Daemon.h  build.sh  config.txt  main.cpp
lab2/: CMakeLists.txt  build.sh  message_queue.h
lab2/client/: client.cpp  client.h
lab2/connections/: AbstractConnection.h  conn.h  conn_mmap.cpp  conn_mmap.h  conn_pipe.cpp  conn_pipe.h  conn_shm.cpp  conn_shm.h
lab2/host/: host.cpp  host.h
lab3/: CMakeLists.txt  build.sh  coarse_grained_sync_set.h  optimistic_sync_set.h  tests.cpp  tests.h
